Bug 17067 – [linux][mgtlibrary] 'Organization Complete' window is cut off. r=mook
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@14539 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/jobProgress.css
+++ b/app/skin/dialogs/jobProgress.css
@@ -39,9 +39,13 @@ See SBJobUtils.jsm and sbIJobProgress.idl.
   width: 500px;
   min-width: 500px;
   max-width: 500px;
-  min-height: 10em;
+  min-height: 11.5em;
 }
 
 #jobprogress_title_desc {
   font-weight: bold !important;
+}
+
+#jobprogress_error_list {
+  margin: 0;
 }
